Metadata/unpackaged/objects/Approval_Routing_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer - Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner / Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First level approver for Region and Account Type combination.</description>
        <label>Level1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001zWsjEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Second level approver for Region and Account Type combination.</description>
        <label>Level2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001zWsiEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Third level approver for Region and Account Type combination.</description>
        <label>Level3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001zWshEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <label>Owner Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routing_Key__c</fullName>
        <externalId>true</externalId>
        <label>Routing Key</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Approval Routing Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Routing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Routing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RequiredFields</fullName>
        <active>true</active>
        <description>Account Type and Owner Region fields are required fields</description>
        <errorConditionFormula>OR(ISPICKVAL(Owner_Region__c,&apos;&apos; ),ISPICKVAL( Account_Type__c,&apos;&apos; ))</errorConditionFormula>
        <errorMessage>Account Type and Region fields are required fields</errorMessage>
    </validationRules>
</CustomObject>